--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -1,18 +1,39 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
+// {
+//   "extends": "./tsconfig.json",
+//   "compilerOptions": {
+//     "outDir": "./out-tsc/spec",
+//     "types": [
+//       "jasmine"
+//     ]
+//   },
+//   "files": [
+//     "src/test.ts",
+//     "src/polyfills.ts"
+//   ],
+//   "include": [
+//     "src/**/*.spec.ts",
+//     "src/**/*.d.ts"
+//   ]
+// }
 {
-  "extends": "./tsconfig.json",
+  "extends": "./tsconfig.es5.json",
   "compilerOptions": {
-    "outDir": "./out-tsc/spec",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "outDir": "../out-tsc/spec",
+    "module": "commonjs",
     "types": [
-      "jasmine"
+      "jasmine",
+      "node"
     ]
   },
   "files": [
-    "src/test.ts",
-    "src/polyfills.ts"
+    "test.ts",
+    "polyfills.ts"
   ],
   "include": [
-    "src/**/*.spec.ts",
-    "src/**/*.d.ts"
+    "**/*.spec.ts",
+    "**/*.d.ts"
   ]
 }
