--- a/package.json
+++ b/package.json
@@ -1,41 +1,45 @@
 {
-  "name": "profile",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^14.0.0",
-    "@angular/common": "^14.0.0",
-    "@angular/compiler": "^14.0.0",
-    "@angular/core": "^14.0.0",
-    "@angular/forms": "^14.0.0",
-    "@angular/platform-browser": "^14.0.0",
-    "@angular/platform-browser-dynamic": "^14.0.0",
-    "@angular/router": "^14.0.0",
-    "@types/nodemailer": "^6.4.4",
-    "nodemailer": "^6.7.5",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "typed.js": "^2.0.12",
-    "zone.js": "^0.11.3"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^14.0.0",
-    "@angular/cli": "~14.0.0",
-    "@angular/compiler-cli": "^14.0.0",
-    "@types/jasmine": "~4.0.0",
-    "jasmine-core": "~4.1.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.7.2"
-  }
+    "name": "profile",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "watch": "ng build --watch --configuration development",
+        "test": "ng test",
+        "build-all": "ng build esa-service-lib && ng build esa-ui-lib && ng build",
+        "e2e": "ng e2e",
+        "dev": "lite-server --baseDir=\"docs/\""
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "^14.0.0",
+        "@angular/common": "^14.0.0",
+        "@angular/compiler": "^14.0.0",
+        "@angular/core": "^14.0.0",
+        "@angular/forms": "^14.0.0",
+        "@angular/platform-browser": "^14.0.0",
+        "@angular/platform-browser-dynamic": "^14.0.0",
+        "@angular/router": "^14.0.0",
+        "@types/nodemailer": "^6.4.4",
+        "nodemailer": "^6.7.5",
+        "rxjs": "~7.5.0",
+        "tslib": "^2.3.0",
+        "typed.js": "^2.0.12",
+        "zone.js": "^0.11.3"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "^14.0.0",
+        "@angular/cli": "~14.0.0",
+        "@angular/compiler-cli": "^14.0.0",
+        "@types/jasmine": "~4.0.0",
+        "jasmine-core": "~4.1.0",
+        "karma": "~6.3.0",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage": "~2.2.0",
+        "karma-jasmine": "~5.0.0",
+        "karma-jasmine-html-reporter": "~1.7.0",
+        "lite-server": "^2.6.1",
+        "typescript": "~4.7.2"
+    }
 }
