--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.0",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve",
+        "start": "node server.js",
         "build": "ng build",
         "watch": "ng build --watch --configuration development",
         "test": "ng test",
@@ -22,6 +22,10 @@
         "@angular/platform-browser-dynamic": "^14.0.0",
         "@angular/router": "^14.0.0",
         "@types/nodemailer": "^6.4.4",
+        "bootstrap": "^5.1.3",
+        "canvasjs": "^1.8.3",
+        "chart.js": "^3.8.0",
+        "ng2-charts": "^3.1.2",
         "nodemailer": "^6.7.5",
         "rxjs": "~7.5.0",
         "tslib": "^2.3.0",
